@@ -6,6 +6,7 @@ Changelog
 
 - Add CMFEditions modifier that prevents journals from being versioned. [lgraf]
 - Forbid transitions linked to dossier offer process through RESTAPI. [njohner]
+- Do not sync deadline modifications to forwarding predecessors. [phgross]
 - Only allow dossier transitions that are possible on the main dossier. [njohner]
 - Prefix agendaitem decision numbers and meeting number by correct period title. [njohner]
 - Handle dossier activation through RESTAPI. [njohner]
